# coap-rs

./: Cargo.toml
benches/: client.rs
examples/: client.rs  client_and_server.rs  server.rs  server_actix.rs  server_async.rs
src/: codec.rs  error.rs  exchange.rs  handler.rs  lib.rs  midgen.rs  params.rs  reliability.rs  request.rs  response.rs  server.rs  server_actix.rs  server_async.rs  socket.rs
src/message/: body.rs  builder.rs  code.rs  error.rs  format.rs  header.rs  message.rs  mod.rs  option.rs  packet.rs  request.rs  token.rs
