[package]
name = "coap"
version = "0.1.0"
description = "Async CoAP server and client implementation in pure Rust"
readme = "README.md"
documentation = "http://covertness.github.io/coap-rs/master/coap/index.html"
repository = "https://github.com/covertness/coap-rs"
license = "MIT"
authors = ["João Costa <joao.costa@mog-technologies.com>"]
keywords = ["coap", "tokio", "async", "server", "client"]
edition = "2018"

[dependencies]
lazy_static = "1.3"
log = "0.4"
serde = { version= "1.0.89", features= [ "derive" ] }
rand = "0.6"
regex = "1.1"
futures = "0.1"

url = "1.7"
bytes = "0.4"
tokio = "0.1"
actix = "0.7"
byteorder = "1.3"
arrayvec = "0.4"

[dev-dependencies]
criterion = "0.2"
env_logger = "0.6"

[[bench]]
name = "client"
harness = false

[[example]]
name = "server"

[[example]]
name = "server_actix"

